# best-practices-bioinfo

./: .gitignore  Makefile  README.md  pyproject.toml
.virtual_documents/book/content/: code.ipynb  formats.ipynb  intro.ipynb  plots.ipynb
book/: _config.yml  _toc.yml  index.md
book/content/: houston.md  intro.ipynb
