[project]
name = "best-practices-for-bioinformatics"
version = "0.1.0"
description = "This is an example of a best practices in bioinformatics (isn't it?)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=8.29.0",
    "ipywidgets>=8.1.5",
    "jupyterlab-tour>=4.0.1",
    "jupyterlab>=4.3.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "jupyter-book>=1.0.3",
]
